# basestation_ersow_2021

.catkin_tools/profiles/default/: devel_collisions.txt
src/basestation_ersow/: CMakeLists.txt  package.xml
src/basestation_ersow-build/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  basestation_ersow.cbp  cmake_install.cmake
src/basestation_ersow-build/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
src/basestation_ersow-build/catkin_generated/: basestation_ersow-msg-extras.cmake.develspace.in  generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/basestation_ersow-build/catkin_generated/installspace/: basestation_ersow-msg-extras.cmake  basestation_ersow-msg-paths.cmake  basestation_ersow.pc  basestation_ersowConfig.cmake
src/basestation_ersow-build/cmake/: basestation_ersow-genmsg-context.py  basestation_ersow-genmsg.cmake
src/basestation_ersow-build/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
src/basestation_ersow-build/gtest/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
src/basestation_ersow-build/include/basestation_ersow/: moc_main_window.cxx_parameters  moc_qnode.cxx_parameters
src/basestation_ersow-build/resources/: images.qrc.depends
src/basestation_ersow/include/basestation_ersow/: main_window.hpp  qnode.hpp
src/basestation_ersow/msg/: dataAgentMsg.msg  data_agent0.msg  data_gui.msg  ifaceMsg.msg  refereeMsg.msg
src/basestation_ersow/resources/: images.qrc
src/basestation_ersow/src/: main.cpp  main_window.cpp  qnode.cpp
src/basestation_ersow/ui/: main_window.ui
src/ersow_comm/: CMakeLists.txt
src/ersow_comm/launch/: ersow_comm.launch
src/ersow_comm/msg/: dataAgentMsg.msg  data_agent0.msg  ifaceMsg.msg  refereeMsg.msg  strategyMsg.msg
src/ersow_comm/src/intelligent_comm/: ratdma.cpp
src/ersow_comm/src/referee_comm/: referee.cpp
src/ersow_comm/src/strategy/: strategyFunction.cpp  strategyHeader.h  strategyMain.cpp
